# pyinstaller_livecode

./: README.md  build.spec  exemplo_tk.py  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller.yml
src/: build.spec
